Static code weakness finding fix, favicon for browser fix.