@@ -1,19 +1,19 @@
 package com.sulaksono.fileingestorservice.service;
 
+import com.sulaksono.fileingestorservice.config.VectorProperties;
 import com.sulaksono.fileingestorservice.model.FileEmbedding;
 import com.sulaksono.fileingestorservice.model.FileType;
 import com.sulaksono.fileingestorservice.repository.FileEmbeddingRepository;
 import com.sulaksono.fileingestorservice.util.FileTypeResolver;
 import jakarta.transaction.Transactional;
-import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 
 /**
@@ -24,23 +24,29 @@ public class ProcessingService {
 
     private static final Logger log = LoggerFactory.getLogger(ProcessingService.class);
 
-    private final EmbeddingService            embeddingService;
-    private final FileEmbeddingRepository     repository;
+    private final EmbeddingService embeddingService;
+    private final FileEmbeddingRepository repository;
+    private final VectorProperties vecProps;
+    private final FileStorageService storage;
 
-    public ProcessingService(EmbeddingService embeddingService, FileEmbeddingRepository repository) {
+    public ProcessingService(EmbeddingService embeddingService, FileEmbeddingRepository repository, VectorProperties vecProps, FileStorageService storage) {
         this.embeddingService = embeddingService;
         this.repository = repository;
+        this.vecProps = vecProps;
+        this.storage = storage;
     }
 
     @Async("asyncExecutor")
     @Transactional
     public void processAsync(Path filePath, String module) {
-        try {
-            File file = filePath.toFile();
-            FileType type = FileTypeResolver.resolve(file.getName());
 
-            String text = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+        try {
+            FileType type = FileTypeResolver.resolve(filePath.getFileName().toString());
+            String   text = Files.readString(filePath, StandardCharsets.UTF_8);
             if (text.isBlank()) return;
+
+            Path relative = storage.getRootDir().relativize(filePath).normalize();
+            String trimmed = trimDepth(relative, vecProps.getIncludePathDepth());
 
             String header = """
                     ### path: %s
@@ -48,24 +54,34 @@ public class ProcessingService {
                     ### module: %s
                     ### deprecated: false
                     ###
-                    """.formatted(filePath.toString(), type, module);
+                    """.formatted(trimmed, type, module);
 
             float[] vector = embeddingService.generateEmbedding(header + text);
 
             repository.save(new FileEmbedding(
-                    file.getName(),
-                    filePath.toString(),
+                    filePath.getFileName().toString(),   // fileName
+                    trimmed,                             // path
                     module,
                     type,
                     vector,
                     text,
                     false));
 
+            log.info("Stored embedding for {} (module={})", trimmed, module);
+
         } catch (Exception e) {
             log.error("Failed to process {}", filePath, e);
         } finally {
-            try { FileUtils.forceDelete(filePath.toFile()); }
-            catch (IOException ignored) { }
+            try { Files.deleteIfExists(filePath); } catch (IOException ignored) {}
         }
+    }
+
+    /* helper ----------------------------------------------------------- */
+    private String trimDepth(Path p, int depth) {
+        if (depth <= 0) return p.getFileName().toString();
+
+        int parts = p.getNameCount();
+        int from  = Math.max(0, parts - depth);
+        return p.subpath(from, parts).toString().replace('\\', '/');
     }
 }
